# HttpCore

./: .gitignore  CMakeLists.txt  LICENSE
include/Common/: HttpHeader.h  HttpRequest.h  HttpRequestSerialiser.h  HttpResponse.h  HttpResponsePopulator.h  HttpResponseStreamParser.h  RequestGenerators.h
include/HttpClient/: ConnectionParameter.h  HttpClient.h  HttpClientParamters.h  HttpHeaderParser.h  Tester.h
src/HttpClient/: CMakeLists.txt  HttpClient.cpp  SampleHttpClient.cpp
src/HttpServer/: CMakeLists.txt  HttpServer.cpp
tests/: CMakeLists.txt  test_HttpClient.cpp  test_HttpServer.cpp
tests/stress/: HttpClientStressTest.cpp  StressTester.h
tests/unit/: test_HttpClient.cpp
